using MasterMind.Controllers;

namespace MasterMind.Views.Graphics
{
    public class GraphicsView : View
    {
        public GraphicsView() {}

        public override void Interact(Controller controller)
        {
            throw new System.NotImplementedException();
        }
    }
}
